# wisernance

./: ADOPTION.md  GOVERNANCE.md  LICENSE  PRE_EXECUTION_MVP.md  README.md  VERSION.md  pyproject.toml  requirements.lock.txt  run.sh  wisernance_log.jsonl
badge/: README.md
charter/: constitution.md
compliance/: SELF_AUDIT.md  audit_checklist.md
examples/: openai_wrapper.py
standards/: classification.md  compliance_mark.md  error_correction.md  execution.md  halt_conditions.md
templates/: WISERNANCE_DECLARATION.md
tests/: test_engine.py
wisernance/: api.py  cli.py  engine.py  llm_ollama.py  models.py  policy.py  retry.py  rules.py  validator.py
wisernance.egg-info/: SOURCES.txt  entry_points.txt
wisernance/policy/: wisernance.yaml
